--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+image:
+    name: hashicorp/terraform
+    entrypoint: ['']
+
 stages:
     - setup
     - plan
@@ -6,14 +10,12 @@ stages:
 
 format:
     stage: setup
-    image: hashicorp/terraform
     script:
         - terraform fmt
     allow_failure: true
 
 download_provider:
     stage: setup
-    image: hashicorp/terraform
     script:
         - terraform init
     cache:
@@ -24,14 +26,12 @@ download_provider:
 
 validate:
     stage: setup
-    image: hashicorp/terraform
     script:
         - terraform validate
     allow_failure: true
 
 plan:
     stage: plan
-    image: hashicorp/terraform
     script:
         - export TF_VAR_do_token=${DIGITALOCEAN_ACCESS_TOKEN}
         - terraform plan -out=plan.out
