--- a/ansible/initial_setup.yml
+++ b/ansible/initial_setup.yml
@@ -1,9 +1,9 @@
 ---
 - name: Create and configure user Ansible
-  import_playbook: playbooks/create_user.yaml
+  import_playbook: ./playbooks/create_user.yml
 
 - name: Install basic packages
-  import_playbook: playbooks/install_basic_pkgs.yaml
+  import_playbook: ./playbooks/install_basic_pkgs.yml
 
 - name: Install and configure Docker
-  import_playbook: playbooks/install_docker.yaml
+  import_playbook: playbooks/install_docker.yml
