--- a/ansible/playbooks/create_user.yml
+++ b/ansible/playbooks/create_user.yml
@@ -1,10 +1,10 @@
 - name: Configure User to automate tasks with Ansible
   hosts: all
   gather_facts: false
-  vars:
-    ansible_ssh_user: "root"
+  # vars:
+  #   ansible_ssh_user: "root"
   vars_files:
-    - host_vars/users.yml
+    - ../host_vars/users.yml
   tasks:
     - name: Create user
       ansible.builtin.user:
