chore: configure gitLab backend as a remote data source

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ crash.*.log
 # Exclude all .tfvars files (sensitive data, private keys, and other secrets)
 *.tfvars
 *.tfvars.json
+*.tfbackend
 
 # Ignore override files
 override.tf
