--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
   TF_ADDRESS: 'https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/terraform/state/${TF_STATE_NAME}'
   TF_USERNAME: ${GITLAB_USERNAME}
   TF_PASSWORD: ${TF_ACCESS_TOKEN}
+  ANSIBLE_HOST_KEY_CHECKING: "False"
 
 cache:
   - key: $CI_PIPELINE_ID-terraform-cache
