feat: add domain and DNS records resources for DigitalOcean

--- a/terraform/.tfvars.sample
+++ b/terraform/.tfvars.sample
@@ -3,6 +3,7 @@
 ssh_key  = "pubkey for add in droplets"
 do_token = "digital ocean token"
 
+do_domain = "lappis.me"
 # ---------------------------------------------------------------------------------------------------------------------
 # Configure the remote backend for Gitlab
 
