--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -147,10 +147,22 @@ deploy_frontend:
     - job: create_infra
       artifacts: true
     - job: setup_infra
+
+deploy_services:
   image: cytopia/ansible:2.13-infra
   stage: deploy
+  before_script:
+    - ansible --version
+    - mv $HOSTS_FILE $ANSIBLE_ROOT
+    - cd $ANSIBLE_ROOT
+    - ansible-galaxy install -r requirements.yml
+    - mkdir -p ~/.ssh
+    - echo "$SSH_PRIVATE_KEY" > ~/.ssh/sige_ed25519
+    - chmod 400 ~/.ssh/sige_ed25519
+    - chmod 700 ~/.ssh
   script:
-    - echo "Deploying to production"
+    - ansible-playbook -i hosts -l homolog deploy_sige.yml --private-key ~/.ssh/sige_ed25519
+    - rm -f ~/.ssh/sige_ed25519
   when: manual
   cache: []
   needs:
