--- a/ansible/host_vars/repository.yml
+++ b/ansible/host_vars/repository.yml
@@ -1,4 +1,8 @@
-# sige_master_repo: 'https://gitlab.com/lappis-unb/projetos-energia/mec-energia/mec-energia-web'
-# sige_master_path: '/home/lappis/mec-energia-web'
 sige_master_repo: 'https://gitlab.com/lappis-unb/projetos-energia/SIGE/sige-master.git'
 sige_master_path: '/home/lappis/sige-master'
+
+sige_front_repo: 'https://gitlab.com/lappis-unb/projetos-energia/SIGE/sige-front.git'
+sige_front_path: '/home/lappis/sige-front'
+
+sige_infra_repo: 'https://gitlab.com/lappis-unb/projetos-energia/SIGE/sige-infra.git'
+sige_infra_path: '/home/lappis/sige-infra'
