--- a/ansible/playbooks/create_docker_network.yml
+++ b/ansible/playbooks/create_docker_network.yml
@@ -4,7 +4,7 @@
   gather_facts: false
   tasks:
     - name: Create docker network
-      community.general.docker_network:
+      community.docker.docker_network:
         name: traefik_proxy
         state: present
         driver: bridge
