chore: add ansible playbook to create wildcard certificates cloudflare

--- a/ansible/playbooks/install_certbot.yml
+++ b/ansible/playbooks/install_certbot.yml
@@ -44,3 +44,8 @@
       community.general.snap:
         name: certbot-dns-digitalocean
         state: present
+
+    - name: Install Certbot Cloudflare DNS plugin
+      community.general.snap:
+        name: certbot-dns-cloudflare
+        state: present
