chore: add create volumes in setup docker playbook

--- a/ansible/initial_setup.yml
+++ b/ansible/initial_setup.yml
@@ -9,4 +9,4 @@
   import_playbook: playbooks/install_docker.yml
 
 - name: Create docker network
-  import_playbook: playbooks/create_docker_network.yml
+  import_playbook: playbooks/setup_docker.yml
