chore: add mepa repositories in host vars

--- a/ansible/host_vars/repository.yml
+++ b/ansible/host_vars/repository.yml
@@ -6,3 +6,9 @@ sige_front_path: '/home/lappis/sige-front'
 
 sige_infra_repo: 'https://gitlab.com/lappis-unb/projetos-energia/SIGE/sige-infra.git'
 sige_infra_path: '/home/lappis/sige-infra'
+
+mepa_api_repo: 'https://gitlab.com/lappis-unb/projetos-energia/mec-energia/mec-energia-api.git'
+mepa_api_path: '/home/lappis/mec-energia-api'
+
+mepa_web_repo: 'https://gitlab.com/lappis-unb/projetos-energia/mec-energia/mec-energia-web.git'
+mepa_web_path: '/home/lappis/mec-energia-web'
